# climbingrobot_hardware_interface

./: CMakeLists.txt  README.md  package.xml
config/: alpine_odometry.yaml  arganelloTelemetry.json
launch/: alpine_low_level_bringup.launch  homing.launch  interface_launch.launch
msg/: AlpineBodyTelemetry.msg  DebugMessage.msg  Imus.msg  RopeCommand.msg  RopeTelemetry.msg
scripts/: alpine_odometry_node.py  dongle_node.py  friction_estimator.py  homing_procedure.py  jump.py  position_control_logger.py  position_step_test.py  telemetry_node.py
srv/: RopeControlMode.srv
