<?xml version="1.0"?>
<package format="2">
  <name>climbingrobot_hardware_interface</name>
  <version>0.0.0</version>
  <description>ROS 1 version of the climbingrobot_hardware_interface package</description>

  <maintainer email="focal@todo.todo">focal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Message/service generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Core ROS Python dependency -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Message dependencies -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Common dependencies for Python nodes -->
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <!-- Python serial dependency for hardware communication -->
  <exec_depend>python3-serial</exec_depend>

  <export>
  </export>
</package>
